--- a/project/registry/templates/index.html
+++ b/project/registry/templates/index.html
@@ -11,7 +11,6 @@
           a {
             color: #19865C;
           }
-
           body {
             max-width: 960px;
             color: #525252;
@@ -30,7 +29,6 @@
             margin: 0;
             font-weight: 400;
           }
-
           h1 {
             font-size: 1.375rem;
             max-width: 32rem;
@@ -42,14 +40,11 @@
             margin: 15px auto 0;
           }
 
-
         /* FORM LABELS */
-
           label {
               font-weight: normal;
               color: #19865C;
           }
-
           .required label, label.required {
               font-weight: bold;
               color: #525252;
@@ -57,16 +52,15 @@
           .helptext {
             display: block;
             margin: 5px;
-          }        
-          /* FORM error */
+          }     
 
+          /* FORM error */
           ul.errorlist li {
               color: #ba2121;
               display: block;
               margin-bottom: 4px;
               overflow-wrap: break-word;
           }
-
           .data {
             max-width: 600px;
             width: auto;
@@ -75,7 +69,6 @@
             font-size: 1.5rem;
             text-align:left;
            }
-
            ul.data{
             list-style-type: none;
           }           
@@ -89,25 +82,17 @@
           <input type="submit" value="проверить номер"  >
         </form>
       </div>
-
       {% if data %}
-
         {% if data.error %}
           <ul class="errorlist"><li>ошибка: <b>{{data.error}}</b></li></ul>
         {% else %}
           <ul class='data'>
-            <li>{{data.phone_numder}}</li>
+            <li>{{data.phone_number}}</li>
             <li>{{data.operator}}</li>
             <li>{{data.region}}</li>
           </ul>
         {% endif %}
       {% endif %}
-
-
-      
-
-
       </main>
-
     </body>
 </html>
